fix stack_overflow visual

--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@ a {
     border-left: 3px solid green; padding-left: 5px;
 }
 
-[data-source="so"] {
+[data-source="stack_overflow"] {
     border-left: 3px solid orange; padding-left: 5px;
 }
 
